tests/NormalTests/paczka1/fuzzy1/89990571.err
Error in line 2: ZgjXxLj9 S956 79,9
Error in line 10: XFlbH5ivk5t A322 100,0
Error in line 12: ZgjXxLj9 S727 96,3
Error in line 25: XFlbH5ivk5t A322 57,6
Error in line 22: L89ow S956 15,7
